src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Hierarchy_Level__c</fullName>
        <formula>IF( ISBLANK( ReportsToId), 0,
     IF( ISBLANK( ReportsTo.ReportsToId ), 1,
          IF( ISBLANK( ReportsTo.ReportsTo.ReportsToId ), 2,
               IF (ISBLANK ( ReportsTo.ReportsTo.ReportsTo.ReportsToId ), 3,
                    IF (ISBLANK(ReportsTo.ReportsTo.ReportsTo.ReportsTo.ReportsToId), 4,
                         IF(ISBLANK(ReportsTo.ReportsTo.ReportsTo.ReportsTo.ReportsTo.ReportsToId), 5,
                              IF(ISBLANK(ReportsTo.ReportsTo.ReportsTo.ReportsTo.ReportsTo.ReportsTo.ReportsToId), 6,
                                   IF(ISBLANK(ReportsTo.ReportsTo.ReportsTo.ReportsTo.ReportsTo.ReportsTo.ReportsTo.ReportsToId), 7,
IF(ISBLANK(ReportsTo.ReportsTo.ReportsTo.ReportsTo.ReportsTo.ReportsTo.ReportsTo.ReportsTo.ReportsToId), 8,
IF(ISBLANK(ReportsTo.ReportsTo.ReportsTo.ReportsTo.ReportsTo.ReportsTo.ReportsTo.ReportsTo.ReportsTo.ReportsToId), 9,
IF(ISBLANK(ReportsTo.ReportsTo.ReportsTo.ReportsTo.ReportsTo.ReportsTo.ReportsTo.ReportsTo.ReportsTo.ReportsTo.ReportsToId), 10, 100)
                                             )
                                        )
                                   )
                              )
                         )
                    )
               )
          )
     )
)</formula>
        <label>Hierarchy Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MSB_Grade__c</fullName>
        <label>Grade</label>
        <picklist>
            <picklistValues>
                <fullName>Adult</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Kindergarten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4th</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
</CustomObject>